upgraded to Spring Boot 3.2.0 and JDK 21